<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nebula_lidar_driver</name>
    <version>0.1.0</version>
    <description>
        Nebula Lidar Drivers
    </description>
    <maintainer email="contact@perceptionengine.jp">Perception Engine</maintainer>

    <license>Apache 2</license>
    <author>Tier IV</author>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>udp_driver</depend>
    <depend>pandar_msgs</depend>
    <depend>livox_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
