<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebula_lidar_driver</name>
  <version>0.1.0</version>
  <description>Nebula Lidar Drivers</description>
  <maintainer email="contact@perceptionengine.jp">Perception Engine</maintainer>

  <license>Apache 2</license>
  <author>Tier IV</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>angles</depend>
  <depend>curl</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libpcl-all-dev</depend>
  <depend>livox_msgs</depend>
  <depend>pandar_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tcp_driver</depend>
  <depend>udp_driver</depend>
  <depend>velodyne_msgs</depend>
  <depend>yaml-cpp</depend>


  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <!--<test_depend>pandar_msgs</test_depend>-->
  <!--<test_depend>rosbag2_cpp</test_depend>-->
  <!--<test_depend>nebula_lidar_driver</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
