<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebula_examples</name>
  <version>0.2.10</version>
  <description>Nebula Offline Processing Samples</description>
  <maintainer email="contact@perceptionengine.jp">Perception Engine</maintainer>

  <license>Apache 2</license>
  <author>TIER IV</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>

  <depend>nebula_common_base</depend>
  <depend>nebula_common_hesai</depend>
  <depend>nebula_common_velodyne</depend>
  <depend>nebula_decoders_hesai</depend>
  <depend>nebula_decoders_velodyne</depend>
  <depend>nebula_ros_base</depend>
  <depend>rosbag2_cpp</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
