<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebula_hw_interfaces</name>
  <version>0.2.5</version>
  <description>Nebula HW Interfaces</description>
  <maintainer email="contact@map4.jp">MAP IV</maintainer>

  <license>Apache 2</license>
  <author>Tier IV</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>boost_tcp_driver</depend>
  <depend>boost_udp_driver</depend>
  <depend>nebula_common</depend>
  <depend>nebula_msgs</depend>
  <depend>pandar_msgs</depend>
  <depend>robosense_msgs</depend>
  <depend>ros2_socketcan</depend>
  <depend>velodyne_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
