<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebula_hw_interfaces_hesai</name>
  <version>0.2.10</version>
  <description>Nebula HW Interfaces Hesai</description>
  <maintainer email="contact@map4.jp">MAP IV</maintainer>

  <license>Apache 2</license>
  <author>TIER IV</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>boost_tcp_driver</depend>
  <depend>boost_udp_driver</depend>
  <depend>nebula_common_base</depend>
  <depend>nebula_common_hesai</depend>
  <depend>nebula_hw_interfaces_base</depend>
  <depend>nebula_msgs</depend>
  <depend>pandar_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
