<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nebula_offline_sample</name>
    <version>0.1.0</version>
    <description>
        Nebula Offline Processing Samples
    </description>
    <maintainer email="contact@perceptionengine.jp">Perception Engine</maintainer>

    <license>Apache 2</license>
    <author>Tier IV</author>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>diagnostic_msgs</depend>
    <depend>diagnostic_updater</depend>
    <depend>sensor_msgs</depend>
    <depend>udp_driver</depend>
    <depend>tcp_driver</depend>
    <depend>pandar_msgs</depend>
    <depend>livox_msgs</depend>
    <depend>velodyne_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_msgs</depend>
    <depend>libpcl-all-dev</depend>
    <depend>nebula_lidar_driver</depend>

    <depend>rosbag2_cpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
